--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "18.14.1",
-    "@types/react": "18.0.28",
+    "@types/react": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
